# hacking-for-humanity

./: .gitignore  LICENSE  README.md
backend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  sample.env
backend/api/: app.py  constants.py  event_handlers.py  exception_handlers.py  middleware.py  resources.py  routes.py  schemas.py  settings.py
backend/api/endpoints/: challenges.py  users.py
backend/config/: conf.d
backend/config/conf.d/: nginx.conf
backend/scripts/: run.sh
docs/: asset-manifest.json  index.html  precache-manifest.0e3662efc8db126ed07ee289ab027be0.js  precache-manifest.0e7f8dad80f7bd42686a0a6623a5c351.js  precache-manifest.1c57a31a11560106e50c69b82ccf8d7d.js  precache-manifest.f362fe6be6b3e3776c4f2a2a9fe193b1.js  service-worker.js
docs/static/css/: main.517fb74f.chunk.css  main.517fb74f.chunk.css.map  main.5984b916.chunk.css  main.5984b916.chunk.css.map  main.82083d21.chunk.css  main.82083d21.chunk.css.map  main.c8fcbe4b.chunk.css  main.c8fcbe4b.chunk.css.map
docs/static/js/: 2.01f95ee3.chunk.js  2.01f95ee3.chunk.js.map  2.189fb57f.chunk.js  2.189fb57f.chunk.js.map  2.7a8ab913.chunk.js  2.e582bd59.chunk.js  2.e582bd59.chunk.js.map  main.a92a4096.chunk.js  main.a92a4096.chunk.js.map  (+5 more)
frontend/: package-lock.json  package.json
frontend/docs/: asset-manifest.json  service-worker.js
frontend/public/: index.html
frontend/src/: App.js  app.scss  index.js
public/: index.html
src/: App.js  app.scss  index.scss
src/services/: allChallenges.js  challenges.json  geolocation.js
src/stylesheets/: _vars.scss
(+41 files in other folders)
